# breaktime

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/: sipping-project.md
.github/workflows/: release.yml
docs/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: error.rs  events.rs  l10n.rs  mod.rs  state.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/audio/: commands.rs  service.rs
src-tauri/src/features/dnd/: commands.rs  service.rs
src-tauri/src/features/idle/: service.rs
src-tauri/src/features/image_loader/: commands.rs  service.rs
src-tauri/src/features/settings/: commands.rs  mod.rs  model.rs  service.rs
src-tauri/src/features/timer/: commands.rs  service.rs
src/contexts/: LocaleContext.tsx  SettingsContext.tsx  TimerContext.tsx
src/features/overlay/: BreakOverlay.module.css  BreakOverlay.tsx  useAdaptiveColor.ts  useBreakEvents.ts
src/features/settings/: SettingsPanel.module.css  SettingsPanel.tsx  useSettings.ts
src/features/tray/: useTrayMenu.ts
src/locales/: en.json  vi.json
src/shared/: types.ts
src/shared/components/: Button.module.css  Button.tsx  CountdownRing.module.css  CountdownRing.tsx  NumberInput.module.css  NumberInput.tsx  Toggle.module.css  Toggle.tsx
src/shared/hooks/: useAudio.ts  useIdleStatus.ts
