[package]
name = "sipping"
version = "0.1.0"
description = "Sipping — Keep sipping, stay hydrated"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rodio = "0.19"
image = "0.25"
dirs = "6"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Power", "Win32_System_SystemInformation", "Win32_System_Registry"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xss"] }

[features]
default = []
raf_support = ["dep:rsraw"]

[dependencies.rsraw]
version = "0.1"
optional = true
